[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "logic"

[dependencies]
bevy_asset_loader = "0.8"
bevy = "0.6"
ggrs = "0.8"
bevy_ggrs = "0.1.3"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
bevy_egui = "*"
wasm-bindgen = "0.2"
